--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
 <section class="contact" id="contact">
     <h2 class="section__title section__title--contact">Contact Me</h2>
     
-    <form action="#" method="post" >
+    <form id="contact-form" action="/submit-form" method="post" >
         <fieldset>
           <legend>Personal Info</legend>
        <p> <label for="firstName">First Name:</label>
