Updated website with new certification and projects

--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -179,6 +179,27 @@
          <img src="MyProjects/Visualize Data with a Heat Map/heatmap.PNG" alt="Visualize Data with a Heat Map">
          <p class="portfolio__p">Visualize Data with a Heat Map</p>
       </a></article>
+      <!-- portfolio item 16-->
+      <article>
+         <h3 class="portfolio--title">Project 16</h3>
+      <a href="https://url-shortener-fcc-project3.glitch.me/" class="portfolio__item" target="_blank">
+         <img src="MyProjects/Url-shortener/urlshortener.PNG" alt="Url Shortener">
+         <p class="portfolio__p">Url Shortener</p>
+      </a></article>
+       <!-- portfolio item 17-->
+       <article>
+         <h3 class="portfolio--title">Project 17</h3>
+      <a href="https://swift-harsh-baryonyx.glitch.me/" class="portfolio__item" target="_blank">
+         <img src="MyProjects/Exercise-Tracker/Exercise-tracker.PNG" alt="Exercise-Tracker">
+         <p class="portfolio__p">Exercise Tracker</p>
+      </a></article>
+       <!-- portfolio item 18-->
+       <article>
+         <h3 class="portfolio--title">Project 18</h3>
+      <a href="https://file-metadata-microservice-fcc-project5.glitch.me/" class="portfolio__item" target="_blank">
+         <img src="MyProjects/File-Metadata-Microservice/FileMetadataMicroservice.PNG" alt="File Metadata Microservice">
+         <p class="portfolio__p">File Metadata Microservice</p>
+      </a></article>
      </div>
        </section>
        <p class="back__top"><a href="#" class="btn">Back to top</a>
