feat: add new Relational Database certification

--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
          <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/data-visualization" target="_blank">Certification</a></dd>
       <dt>Npm, Node.js, Express.js, MongoDB and Mongoose</dt>
          <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/back-end-development-and-apis" target="_blank">Certification</a></dd>
+         <dt>SQL, PostgreSQL, Git</dt>
+         <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/relational-database-v8" target="_blank">Certification</a></dd>
       </dl>
          
       </div>
