--- a/resume.html
+++ b/resume.html
@@ -110,6 +110,7 @@
                 <li>Bootstrap-jQuery-SASS-React-Redux: <a href="https://freecodecamp.org/certification/AbrahamBilici/front-end-development-libraries" target="_blank" class="certification">Front End Development Libraries</a></li>
                 <li>D3.js - JSON APIs and AJAX: <a href="https://www.freecodecamp.org/certification/AbrahamBilici/data-visualization" target="_blank" class="certification">Data Visualization</a></li>
                 <li>Npm, Node.js, Express.js, MongoDB and Mongoose: <a href="https://www.freecodecamp.org/certification/AbrahamBilici/back-end-development-and-apis" target="_blank" class="certification">Back End Development and APIs</a></li>
+                <li>SQL, PostgreSQL, Git: <a href="https://www.freecodecamp.org/certification/AbrahamBilici/relational-database-v8" target="_blank" class="certification">Relational Database</a></li>
             </ul>
         
         <br>
