--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -200,6 +200,27 @@
          <img src="MyProjects/File-Metadata-Microservice/FileMetadataMicroservice.PNG" alt="File Metadata Microservice">
          <p class="portfolio__p">File Metadata Microservice</p>
       </a></article>
+       <!-- portfolio item 19-->
+     <article>
+      <h3 class="portfolio--title">Project 19</h3>
+   <a href="https://github.com/AbrahamBilici/Relational_database_certification/tree/main/World%20Cup%20Database" class="portfolio__item" target="_blank">
+      <img src="MyProjects/world_cup_database/worldcup.PNG" alt="World Cup Database">
+      <p class="portfolio__p">World Cup Database</p>
+   </a></article>
+     <!-- portfolio item 20-->
+     <article>
+      <h3 class="portfolio--title">Project 20</h3>
+   <a href="https://github.com/AbrahamBilici/Relational_database_certification/tree/main/Salon%20Appointment%20Scheduler" class="portfolio__item" target="_blank">
+      <img src="MyProjects/Salon_Appointment_scheduler/salon_appointment.PNG" alt="Salon Appointment Scheduler">
+      <p class="portfolio__p">Salon Appointment Scheduler</p>
+   </a></article>
+     <!-- portfolio item 21-->
+     <article>
+      <h3 class="portfolio--title">Project 21</h3>
+   <a href="https://github.com/AbrahamBilici/Relational_database_certification/tree/main/Number%20Guessing%20Game" class="portfolio__item" target="_blank">
+      <img src="MyProjects/Number_guessing_game/number_guess.PNG" alt="Number Guessing Game">
+      <p class="portfolio__p">Number Guessing Game</p>
+   </a></article>
      </div>
        </section>
        <p class="back__top"><a href="#" class="btn">Back to top</a>
