fix: resume.html and index.html updated

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="services">
         <div class="service">
             <h3>I am a Mathematician</h3>
-            <p>I graduated from mathematics in Turkey, I am an expert on pure mathematics.</p>
+            <p>I graduated from mathematics in Turkiye, I am an expert on pure mathematics.</p>
         </div> <!-- / service -->
 
         <div class="service">
@@ -88,7 +88,7 @@
 
         <div class="service">
             <h3>I am a teacher</h3>
-            <p>I have pedagogical formation certification. I was working for five years as a math teacher.</p>
+            <p>I have certification of pedagogical formation . I had worked for five years as a math teacher.</p>
         </div> <!-- / service -->
     </div> <!-- / services -->
 
