--- a/resume.html
+++ b/resume.html
@@ -84,8 +84,7 @@
         
         <br>
         <h2>Experience</h2>
-        <h3>Ankara / Turkiye</h3>
-        <p>As a Math Teacher -(09 2017 - 03 2022)</p>
+        <h3>As a Math Teacher - (2017-2022) , Ankara / Turkiye</h3>       
            <ul>
                 <li>Motivated and trained students to improve their mathematics skills.</li>
                 <li>Encouraged students to keep their studies.</li>
@@ -94,11 +93,11 @@
             </ul>
         <br>
         <h2>Education</h2>
-        <h3>Ankara Haci Bayram Veli University, Ankara/Turkey</h3>
+        <h3>Ankara Haci Bayram Veli University, Ankara/Turkiye</h3>
         <ul>
             <li>Bachelor Degree - Mathematics -(10 2015- 07 2020)</li>
         </ul>
-        <h3>Gazi University, Ankara/Turkey</h3>
+        <h3>Gazi University, Ankara/Turkiye</h3>
         <ul>
             <li>Pedagogic Formation- (10 2018- 07 2019)</li>
         </ul>
