fix: css and html files updated

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
             </button>
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-                    <li class="nav__item"><a href="#services" class="nav__link">My services</a></li>
-                    <li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
-                    <li class="nav__item"><a href="#work" class="nav__link">My work</a></li>
+                    <li class="nav__item nav__link"><a href="#home" class="nav__link">Home</a></li>
+                    <li class="nav__item nav__link"><a href="#services" class="nav__link">My services</a></li>
+                    <li class="nav__item nav__link"><a href="#about" class="nav__link">About me</a></li>
+                    <li class="nav__item nav__link"><a href="#work" class="nav__link">My work</a></li>
                 </ul>
             </nav>
         </div>
@@ -118,8 +118,7 @@
          <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/back-end-development-and-apis" target="_blank">Certification</a></dd>
          <dt>SQL, PostgreSQL, Git</dt>
          <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/relational-database-v8" target="_blank">Certification</a></dd>
-      </dl>
-         
+      </dl>         
       </div>
   
       <img src="img/20221218_115946.jpg" alt="a pic of Ibrahim" class="about-me__img" title="H. Ibrahim Bilici" loading="lazy">
