--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
   <div class="container-form">
     <h2 class="form-h2">Contact Me</h2>
     
-    <form id="contact-form" action="/submit" method="POST" >
+    <form id="contact-form" action="/halilibrahimbilici/submit" method="POST" >
         <fieldset>
           <legend>Personal Info</legend>
        <p> <label for="firstName">First Name:</label>
