--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This page Halil Ibrahim Bilici's personal websites">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <title>H. Ibrahim Bilici</title>
     <link rel="icon" href="img/icon.svg" type="images/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" 
