--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
   <div class="container-form">
     <h2 class="form-h2">Contact Me</h2>
     
-    <form id="contact-form" action="/halilibrahimbilici/contact.html" method="POST" >
+    <form id="contact-form" action="https://abrahambilici.github.io/halilibrahimbilici/contact.html" method="POST" >
         <fieldset>
           <legend>Personal Info</legend>
        <p> <label for="firstName">First Name:</label>
