feat: added new certification

--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
          <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/back-end-development-and-apis" target="_blank">Certification</a></dd>
          <dt>SQL, PostgreSQL, Git</dt>
          <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/relational-database-v8" target="_blank">Certification</a></dd>
+         <dt>Chai, Advanced Node.js and Express.js</dt>
+         <dd><a href="https://freecodecamp.org/certification/AbrahamBilici/quality-assurance-v7" target="_blank">Certification</a></dd>
       </dl>         
       </div>
   
