--- a/resume.html
+++ b/resume.html
@@ -113,6 +113,7 @@
                 <li>D3.js - JSON APIs and AJAX: <a href="https://www.freecodecamp.org/certification/AbrahamBilici/data-visualization" target="_blank" class="certification">Data Visualization</a></li>
                 <li>Npm, Node.js, Express.js, MongoDB and Mongoose: <a href="https://www.freecodecamp.org/certification/AbrahamBilici/back-end-development-and-apis" target="_blank" class="certification">Back End Development and APIs</a></li>
                 <li>SQL, PostgreSQL, Git: <a href="https://www.freecodecamp.org/certification/AbrahamBilici/relational-database-v8" target="_blank" class="certification">Relational Database</a></li>
+                <li>Chai, Advanced Node.js and Express.js: <a href="https://freecodecamp.org/certification/AbrahamBilici/quality-assurance-v7" target="_blank" class="certification">Quality Assurance</a></li>
             </ul>
         
         <br>
