feat: add new projects

--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -223,6 +223,48 @@
        <img src="./MyProjects/Number_guessing_game/number_guess.PNG" alt="Number Guessing Game">
        <p class="portfolio__p">Number Guessing Game</p>
     </a></article>
+      <!-- portfolio item 22-->
+      <article>
+       <h3 class="portfolio--title">Project 22</h3>
+    <a href="https://eager-roasted-plot.glitch.me/" class="portfolio__item" target="_blank">
+       <img src="./MyProjects/AmericanBritishTranslator/AmericanBritishTranslator.PNG" alt="American British Translator">
+       <p class="portfolio__p">American British Translator</p>
+    </a></article>
+      <!-- portfolio item 23-->
+      <article>
+       <h3 class="portfolio--title">Project 23</h3>
+    <a href="https://chocolate-hill-currency.glitch.me/" class="portfolio__item" target="_blank">
+       <img src="./MyProjects/PersonalLibrary/PersonalLibrary.PNG" alt="Personal Library">
+       <p class="portfolio__p">Personal Library</p>
+    </a></article>
+      <!-- portfolio item 24-->
+      <article>
+       <h3 class="portfolio--title">Project 24</h3>
+    <a href="https://yellow-fir-bosworth.glitch.me/" class="portfolio__item" target="_blank">
+       <img src="./MyProjects/IssueTracker/IssueTracker.PNG" alt="Issue Tracker">
+       <p class="portfolio__p">Issue Tracker</p>
+    </a></article>
+      <!-- portfolio item 25-->
+      <article>
+       <h3 class="portfolio--title">Project 24</h3>
+    <a href="" class="portfolio__item" target="_blank">
+       <img src="./MyProjects/MetricImperialConverter/MetricImperialConverter.PNG" alt="MetricImperial Converter">
+       <p class="portfolio__p">MetricImperial Converter</p>
+    </a></article>
+      <!-- portfolio item 26-->
+      <article>
+       <h3 class="portfolio--title">Project 24</h3>
+    <a href="https://sudokusolverfcc.glitch.me/" class="portfolio__item" target="_blank">
+       <img src="./MyProjects/SudokuSolver/SudokuSolver.PNG" alt="Sudoku Solver">
+       <p class="portfolio__p">Sudoku Solver</p>
+    </a></article>
+      <!-- portfolio item 27-->
+      <article>
+       <h3 class="portfolio--title">Project 24</h3>
+    <a href="https://request-header-parser-microservice-fcc-project2.glitch.me/" class="portfolio__item" target="_blank">
+       <img src="./MyProjects/RequestHeaderParserMicroservice/RequestHeaderParserMicroservice.PNG" alt="Request Header Parser Microservice">
+       <p class="portfolio__p">Request Header Parser Microservice</p>
+    </a></article>
      </div>
        </section>
        <p class="back__top"><a href="./portfolio-item.html#" class="btn">Back to top</a>
