fix: update files

--- a/index.html
+++ b/index.html
@@ -196,92 +196,9 @@
      <a href="./MyProjects/CashRegister/CashRegister.txt" class="portfolio__item" target="_blank">
         <img src="./MyProjects/CashRegister/Clipboard09.jpg" alt="Cash Register">
         <p class="portfolio__p">Cash Register</p>
-     </a></article>
-      <!-- portfolio item 10-->
-      <article>
-        <h3 class="portfolio--title">Project 10</h3>
-     <a href="https://codepen.io/AbrahamBilici/pen/VwELxWO" class="portfolio__item" target="_blank">
-        <img src="./MyProjects/Build a JavaScript Calculator/Calculator.PNG" alt="Build a JavaScript Calculator">
-        <p class="portfolio__p">Build a JavaScript Calculator</p>
-     </a></article>
-      <!-- portfolio item 11-->
-     <article>
-        <h3 class="portfolio--title">Project 11</h3>
-     <a href="https://codepen.io/AbrahamBilici/pen/wvYvBRj" class="portfolio__item" target="_blank">
-        <img src="./MyProjects/Build a Drum Machine/DrumMachine.PNG" alt="Build a Drum Machine">
-        <p class="portfolio__p">Build a Drum Machine</p>
-     </a></article>
-      <!-- portfolio item 12-->
-     <article>
-        <h3 class="portfolio--title">Project 12</h3>
-     <a href="https://codepen.io/AbrahamBilici/pen/QWBxBGE" class="portfolio__item" target="_blank">
-        <img src="./MyProjects/Build a Random Quote Machine/QuoteMachine.PNG" alt="Build a Random Quote Machine">
-        <p class="portfolio__p">Build a Random Quote Machine</p>
-     </a></article>
-     <!-- portfolio item 13-->
-     <article>
-        <h3 class="portfolio--title">Project 13</h3>
-     <a href="https://abrahambilici.github.io/certification/Visualize%20Data%20with%20a%20Choropleth%20Map/index.html" class="portfolio__item" target="_blank">
-        <img src="./MyProjects/Visualize Data with a Choropleth Map/Choropleth.PNG" alt="Visualize Data with a Choropleth Map">
-        <p class="portfolio__p">Visualize Data with a Choropleth Map</p>
-     </a></article>
-      <!-- portfolio item 14-->
-     <article>
-        <h3 class="portfolio--title">Project 14</h3>
-     <a href="https://abrahambilici.github.io/certification/Visualize%20Data%20with%20a%20Treemap%20Diagram/index.html" class="portfolio__item" target="_blank">
-        <img src="./MyProjects/Visualize Data with a Treemap Diagram/treemap.PNG" alt="Visualize Data with a Treemap Diagram">
-        <p class="portfolio__p">Visualize Data with a Treemap Diagram</p>
-     </a></article>
-      <!-- portfolio item 15-->
-      <article>
-        <h3 class="portfolio--title">Project 15</h3>
-     <a href="https://abrahambilici.github.io/certification/Visualize%20Data%20with%20a%20Heat%20Map/index.html" class="portfolio__item" target="_blank">
-        <img src="./MyProjects/Visualize Data with a Heat Map/heatmap.PNG" alt="Visualize Data with a Heat Map">
-        <p class="portfolio__p">Visualize Data with a Heat Map</p>
-     </a></article>
-      <!-- portfolio item 16-->
-      <article>
-        <h3 class="portfolio--title">Project 16</h3>
-     <a href="https://url-shortener-fcc-project3.glitch.me/" class="portfolio__item" target="_blank">
-        <img src="./MyProjects/Url-shortener/urlshortener.PNG" alt="Url Shortener">
-        <p class="portfolio__p">Url Shortener</p>
-     </a></article>
-      <!-- portfolio item 17-->
-      <article>
-        <h3 class="portfolio--title">Project 17</h3>
-     <a href="https://swift-harsh-baryonyx.glitch.me/" class="portfolio__item" target="_blank">
-        <img src="./MyProjects/Exercise-Tracker/Exercise-tracker.PNG" alt="Exercise-Tracker">
-        <p class="portfolio__p">Exercise Tracker</p>
-     </a></article>
-      <!-- portfolio item 18-->
-      <article>
-        <h3 class="portfolio--title">Project 18</h3>
-     <a href="https://file-metadata-microservice-fcc-project5.glitch.me/" class="portfolio__item" target="_blank">
-        <img src="./MyProjects/File-Metadata-Microservice/FileMetadataMicroservice.PNG" alt="File Metadata Microservice">
-        <p class="portfolio__p">File Metadata Microservice</p>
-     </a></article>
-     <!-- portfolio item 19-->
-     <article>
-      <h3 class="portfolio--title">Project 19</h3>
-   <a href="https://github.com/AbrahamBilici/Relational_database_certification/tree/main/World%20Cup%20Database" class="portfolio__item" target="_blank">
-      <img src="./MyProjects/world_cup_database/worldcup.PNG" alt="World Cup Database">
-      <p class="portfolio__p">World Cup Database</p>
-   </a></article>
-     <!-- portfolio item 20-->
-     <article>
-      <h3 class="portfolio--title">Project 20</h3>
-   <a href="https://github.com/AbrahamBilici/Relational_database_certification/tree/main/Salon%20Appointment%20Scheduler" class="portfolio__item" target="_blank">
-      <img src="./MyProjects/Salon_Appointment_scheduler/salon_appointment.PNG" alt="Salon Appointment Scheduler">
-      <p class="portfolio__p">Salon Appointment Scheduler</p>
-   </a></article>
-     <!-- portfolio item 21-->
-     <article>
-      <h3 class="portfolio--title">Project 21</h3>
-   <a href="https://github.com/AbrahamBilici/Relational_database_certification/tree/main/Number%20Guessing%20Game" class="portfolio__item" target="_blank">
-      <img src="./MyProjects/Number_guessing_game/number_guess.PNG" alt="Number Guessing Game">
-      <p class="portfolio__p">Number Guessing Game</p>
-   </a></article>
+     </a></article>      
     </div>
+    <a href="./portfolio-item.html#moreProjects" class="btn">Show More Projects</a>
    </section>
 </main>
 
