--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -140,7 +140,7 @@
          <p class="portfolio__p">Cash Register</p>
       </a></article>
        <!-- portfolio item 10-->
-       <article>
+       <article id="moreProjects">
          <h3 class="portfolio--title">Project 10</h3>
       <a href="https://codepen.io/AbrahamBilici/pen/VwELxWO" class="portfolio__item" target="_blank">
          <img src="./MyProjects/Build a JavaScript Calculator/Calculator.PNG" alt="Build a JavaScript Calculator">
