feat: new projects added

--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -245,25 +245,68 @@
     </a></article>
       <!-- portfolio item 25-->
       <article>
-       <h3 class="portfolio--title">Project 24</h3>
+       <h3 class="portfolio--title">Project 25</h3>
     <a href="" class="portfolio__item" target="_blank">
        <img src="./MyProjects/MetricImperialConverter/MetricImperialConverter.PNG" alt="MetricImperial Converter">
        <p class="portfolio__p">MetricImperial Converter</p>
     </a></article>
       <!-- portfolio item 26-->
       <article>
-       <h3 class="portfolio--title">Project 24</h3>
+       <h3 class="portfolio--title">Project 26</h3>
     <a href="https://sudokusolverfcc.glitch.me/" class="portfolio__item" target="_blank">
        <img src="./MyProjects/SudokuSolver/SudokuSolver.PNG" alt="Sudoku Solver">
        <p class="portfolio__p">Sudoku Solver</p>
     </a></article>
       <!-- portfolio item 27-->
       <article>
-       <h3 class="portfolio--title">Project 24</h3>
+       <h3 class="portfolio--title">Project 27</h3>
     <a href="https://request-header-parser-microservice-fcc-project2.glitch.me/" class="portfolio__item" target="_blank">
        <img src="./MyProjects/RequestHeaderParserMicroservice/RequestHeaderParserMicroservice.PNG" alt="Request Header Parser Microservice">
        <p class="portfolio__p">Request Header Parser Microservice</p>
     </a></article>
+      <!-- portfolio item 28-->
+      <article>
+       <h3 class="portfolio--title">Project 28</h3>
+    <a href="https://codepen.io/AbrahamBilici/full/jOeMbqG" class="portfolio__item" target="_blank">
+       <img src="./MyProjects/BuildA25+5Clock/BuildA25+5Clock.PNG" alt="Build a 25 + 5 Clock">
+       <p class="portfolio__p">Build a 25 + 5 Clock</p>
+    </a></article>
+      <!-- portfolio item 29-->
+      <article>
+       <h3 class="portfolio--title">Project 29</h3>
+    <a href="https://abrahambilici.github.io/certification/Visualize%20Data%20with%20a%20Scatterplot%20Graph/index.html" class="portfolio__item" target="_blank">
+       <img src="./MyProjects/VisualizeDataWithAScatterplotGraph/VisualizeDataWithAScatterplotGraph.PNG" alt="Visualize Data With A Scatterplot Graph">
+       <p class="portfolio__p">Visualize Data with a Scatterplot Graph</p>
+    </a></article>
+      <!-- portfolio item 30-->
+      <article>
+       <h3 class="portfolio--title">Project 30</h3>
+    <a href="https://abrahambilici.github.io/certification/Visualize%20Data%20with%20a%20Bar%20Chart/index.html" class="portfolio__item" target="_blank">
+       <img src="./MyProjects/VisualizeDatawithaBarChart/VisualizeDatawithaBarChart.PNG" alt="Visualize Data with a Bar Chart">
+       <p class="portfolio__p">Visualize Data with a Bar Chart</p>
+    </a></article>
+      <!-- portfolio item 31-->
+      <article>
+       <h3 class="portfolio--title">Project 31</h3>
+    <a href="https://boilerplate-project-timestamp-fcc-firtproject.glitch.me/" class="portfolio__item" target="_blank">
+       <img src="./MyProjects/TimestampMicroservice/TimestampMicroservice.PNG" alt="Timestamp Microservice">
+       <p class="portfolio__p">Timestamp Microservice</p>
+    </a></article>
+      <!-- portfolio item 32-->
+      <article>
+       <h3 class="portfolio--title">Project 32</h3>
+    <a href="https://github.com/AbrahamBilici/Relational_database_certification/blob/main/Build%20a%20Celestial%20Bodies%20Database/universe.sql" class="portfolio__item" target="_blank">
+       <img src="./MyProjects/CelestialBodiesDatabase/Celestia BodiesDatabase.PNG" alt="Celestial Bodies Database">
+       <p class="portfolio__p">Celestial Bodies Database</p>
+    </a></article>
+      <!-- portfolio item 33-->
+      <article>
+       <h3 class="portfolio--title">Project 33</h3>
+    <a href="https://github.com/AbrahamBilici/Relational_database_certification/tree/main/Periodic%20Table%20Database" class="portfolio__item" target="_blank">
+       <img src="./MyProjects/PeriodicTableDatabase/PeriodicTableDatabase.PNG" alt="Periodic Table Database">
+       <p class="portfolio__p">Periodic Table Database</p>
+    </a></article>
+      
      </div>
        </section>
        <p class="back__top"><a href="./portfolio-item.html#" class="btn">Back to top</a>
