--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="service">
             <h3>I am a Software Developer</h3>
-            <p>I started learning Softwware Languages in 2022. I can tell you knowing this type of languages you must be good at mathematics.</p>
+            <p>I started learning Software Languages in 2022. I can tell you knowing this type of languages you must be good at mathematics.</p>
         </div> <!-- / service -->
 
         <div class="service">
