--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
       <h2 class="section__title section__title--about">About me</h2>
       <p class="section__subtitle section__subtitle--about">I'm 30 who live in El Salvador</p>
       <div class="about-me__body">
-         <p>I am Mathematician and Software Developer. I am married with a salvodorian lady. I came to El Salvador in march 2022.</p>
-         <p>I am someone who truly believes in the following strengs: Well organized,  Discipline
+         <p>I am Mathematician and Software Developer. I am married to a salvodorian lady. I came to El Salvador in march 2022.</p>
+         <p>I am someone who truly believes in the following strengths: Well organized,  Discipline
           Detail oriented, Goal oriented, Teamwork, Open to feedback and passionated to work, Willing to learn all the time.</p>
          <p>Here are a few technologies I've been working on</p>
          <dl><dt>HTML-CSS</dt>
