--- a/index.html
+++ b/index.html
@@ -102,29 +102,29 @@
       <h2 class="section__title section__title--about">About me</h2>
       <p class="section__subtitle section__subtitle--about">I'm 30 who live in El Salvador</p>
       <div class="about-me__body">
-         <p>I am a passionate Mathematician and Self-Taught Software Developer.</p>
+          <p>I am a passionate Mathematician and Self-Taught Software Developer.</p>
           <p>As a passionate mathematician and self-taught software developer, I bring a strong analytical thinking and technical expertise with a solid educational foundation in Mathematics from the University, I dived Software Development industry independently, honing my skills without any external assistance.  </p>
-       <p>I carry on a keen eye for detail, and a disciplined approach to my work. My goal-oriented mindset drives me to constantly strive for excellence even sometimes I fail. However I am acknowledge my lacknesses, it allows me to get up again because I am open to feedback, recognizing its importance in personal and professional growth, and remain continuously eager about learning.<</p>
-          <p>My self-motivation consists from my background in mathematics. Successfully gaining such a most difficult subject has overcomed in me the belief which I can excel in any struggle I undertake. The key lies in perseverance and never giving up. Many wonder how I maintain my unwavering focus and enjoyment while studying or working for extended hours. The answer lies in the sweet fruits of success and my slogan of "Never Give Up." Furthermore, my curiosity fuels my desire to continuously get new knowledge and skills.<</p>
-          <p>Beyond the software development and mathematics, I sometimes hang out in watching tennis, playing ping pong, desire to learn how to play the guitar, and occasionally writing poetries.<</p>
-          <p>Exploring a diverse range of technologies including HTML/CSS, JavaScript, Bootstrap, jQuery, SASS, React.js, Redux, D3.js, JSON APIs and AJAX, Node.js, Npm, Express.js, Mongoose, MongoDB, PostgreSQL, GIT, and Chai.
-</p>     
-         <dl><dt>HTML-CSS</dt>
-          <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/responsive-web-design" target="_blank">Certification</a></dd>
+          <p>I carry on a keen eye for detail, and a disciplined approach to my work. My goal-oriented mindset drives me to constantly strive for excellence even sometimes I fail. However I am acknowledge my lacknesses, it allows me to get up again because I am open to feedback, recognizing its importance in personal and professional growth, and remain continuously eager about learning.</p>
+          <p>My self-motivation consists from my background in mathematics. Successfully gaining such a most difficult subject has overcomed in me the belief which I can excel in any struggle I undertake. The key lies in perseverance and never giving up. Many wonder how I maintain my unwavering focus and enjoyment while studying or working for extended hours. The answer lies in the sweet fruits of success and my slogan of "Never Give Up." Furthermore, my curiosity fuels my desire to continuously get new knowledge and skills.</p>
+          <p>Beyond the software development and mathematics, I sometimes hang out in watching tennis, playing ping pong, desire to learn how to play the guitar, and occasionally writing poetries.</p>
+          <p>Exploring a diverse range of technologies including HTML/CSS, JavaScript, Bootstrap, jQuery, SASS, React.js, Redux, D3.js, JSON APIs and AJAX, Node.js, Npm, Express.js, Mongoose, MongoDB, PostgreSQL, GIT, and Chai.</p>     
+         <dl>
+          <dt>HTML-CSS</dt>
+           <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/responsive-web-design" target="_blank">Certification</a></dd>
           <dt>JavaScript</dt>
-         <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/javascript-algorithms-and-data-structures" target="_blank">Certification</a></dd>
-      <dt>Bootstrap-jQuery-SASS-React</dt>
-      <dd><a href="https://freecodecamp.org/certification/AbrahamBilici/front-end-development-libraries" target="_blank">Certification</a></dd>
-      <dt>D3.js - JSON APIs and AJAX</dt>
-         <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/data-visualization" target="_blank">Certification</a></dd>
-      <dt>Npm, Node.js, Express.js, MongoDB and Mongoose</dt>
-         <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/back-end-development-and-apis" target="_blank">Certification</a></dd>
-         <dt>SQL, PostgreSQL, Git</dt>
-         <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/relational-database-v8" target="_blank">Certification</a></dd>
-         <dt>Chai, Advanced Node.js and Express.js</dt>
-         <dd><a href="https://freecodecamp.org/certification/AbrahamBilici/quality-assurance-v7" target="_blank">Certification</a></dd>
-      </dl>         
-      </div>
+           <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/javascript-algorithms-and-data-structures" target="_blank">Certification</a></dd>
+          <dt>Bootstrap-jQuery-SASS-React</dt>
+           <dd><a href="https://freecodecamp.org/certification/AbrahamBilici/front-end-development-libraries" target="_blank">Certification</a></dd>
+          <dt>D3.js - JSON APIs and AJAX</dt>
+           <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/data-visualization" target="_blank">Certification</a></dd>
+          <dt>Npm, Node.js, Express.js, MongoDB and Mongoose</dt>
+           <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/back-end-development-and-apis" target="_blank">Certification</a></dd>
+          <dt>SQL, PostgreSQL, Git</dt>
+           <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/relational-database-v8" target="_blank">Certification</a></dd>
+          <dt>Chai, Advanced Node.js and Express.js</dt>
+           <dd><a href="https://freecodecamp.org/certification/AbrahamBilici/quality-assurance-v7" target="_blank">Certification</a></dd>
+       </dl>         
+   </div>
   
       <img src="./img/20221218_115946.jpg" alt="a pic of Ibrahim" class="about-me__img" title="H. Ibrahim Bilici" loading="lazy">
      </section>
