--- a/contact.html
+++ b/contact.html
@@ -226,7 +226,7 @@
       </div>
       
       <div id="error-message" style="display: none;">
-        <h3>Form didn't submit,  Please try again!.</h3>
+        <h3>Form didn't submit,  Please it try again on <a href="https://halilibrahimbilici.glitch.me/contact.html">here</a>.</h3>
         
       </div>
     </fieldset>
