--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         Hi I am <strong>Ibrahim Bilici</strong>
     </h1>
     <p class="section__subtitle section__subtitle--intro">
-        Mathematician / Software Developer
+        Mathematician  
     </p>
     
     <img src="./img/ibrahim.bilici.JPG" alt="a picture of Ibrahim" class="intro__img" title="H. Ibrahim Bilici" loading="lazy">
@@ -213,7 +213,7 @@
    <a href="mailto:halilibrahimbilici@hotmail.com" class="footer-link">My e-mail</a>
    <ul class="social-list">
     <li class="social-list__item">
-        <a href="https://www.linkedin.com/in/h-ibrahim-bilici-78b987242/" class="social-list__link" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+        <a href="https://www.linkedin.com/in/ibrahim-bilici-78b987242/" class="social-list__link" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
     <li class="social-list__item">
         <a href="https://twitter.com/Avraambilici" class="social-list__link" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
     <li class="social-list__item">
