--- a/resume.html
+++ b/resume.html
@@ -94,6 +94,8 @@
              <li>Problem solving regarding bottom performers.</li>
             </ul>
         <br>
+        <h3> Customer Care Representative - (2023- ) - El Salvador</h3>       
+        <br>
         <h2>Education</h2>
         <h3>Ankara Haci Bayram Veli University, Ankara/Turkiye</h3>
         <ul>
@@ -143,7 +145,7 @@
         <a href="mailto:halilibrahimbilici@hotmail.com" class="footer-link">My e-mail</a>
         <ul class="social-list">
          <li class="social-list__item">
-             <a href="https://www.linkedin.com/in/h-ibrahim-bilici-78b987242/" class="social-list__link" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+             <a href="https://www.linkedin.com/in/ibrahim-bilici-78b987242/" class="social-list__link" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
          <li class="social-list__item">
              <a href="https://twitter.com/Avraambilici" class="social-list__link" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
          <li class="social-list__item">
