--- a/resume.html
+++ b/resume.html
@@ -94,7 +94,8 @@
              <li>Problem solving regarding bottom performers.</li>
             </ul>
         <br>
-        <h3> Customer Care Representative - (2023- ) - El Salvador</h3>       
+        <h3> Customer Care Representative - (2023-2025) - El Salvador</h3>   
+        <h3> Real Time Analyst - (2025 - Present) - El Salvador</h3>   
         <br>
         <h2>Education</h2>
         <h3>Ankara Haci Bayram Veli University, Ankara/Turkiye</h3>
