--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         Hi I am <strong>Ibrahim Bilici</strong>
     </h1>
     <p class="section__subtitle section__subtitle--intro">
-        Mathematician  
+        Mathematician | Data Analyst
     </p>
     
     <img src="./img/ibrahim.bilici.JPG" alt="a picture of Ibrahim" class="intro__img" title="H. Ibrahim Bilici" loading="lazy">
@@ -82,7 +82,7 @@
         </div> <!-- / service -->
 
         <div class="service">
-            <h3>I am a Developer and Analyst</h3>
+            <h3>I am a Data Analyst</h3>
             <p>I started learning Programming Languages in 2022. I can tell you knowing this type of languages you must be good at mathematics.</p>
         </div> <!-- / service -->
 
