--- a/index.html
+++ b/index.html
@@ -101,15 +101,13 @@
     <!-- About me -->
     <section class="about-me" id="about">
       <h2 class="section__title section__title--about">About me</h2>
-      <p class="section__subtitle section__subtitle--about">I'm 30 who live in El Salvador</p>
-      <div class="about-me__body">
-          <p>I am a passionate Mathematician and Self-Taught Developer and Analyst.</p>
-          <p>As a passionate mathematician and self-taught developer, I bring a strong analytical thinking and technical expertise with a solid educational foundation in Mathematics from the University, I dived Software Development industry independently, honing my skills without any external assistance.  </p>
-          <p>I carry on a keen eye for detail, and a disciplined approach to my work. My goal-oriented mindset drives me to constantly strive for excellence even sometimes I fail. However I am acknowledge my lacknesses, it allows me to get up again because I am open to feedback, recognizing its importance in personal and professional growth, and remain continuously eager about learning.</p>
-          <p>My self-motivation consists from my background in mathematics. Successfully gaining such a most difficult subject has overcomed in me the belief which I can excel in any struggle I undertake. The key lies in perseverance and never giving up. Many wonder how I maintain my unwavering focus and enjoyment while studying or working for extended hours. The answer lies in the sweet fruits of success and my slogan of "Never Give Up." Furthermore, my curiosity fuels my desire to continuously get new knowledge and skills.</p>
-          <p>Beyond that, I sometimes hang out in watching tennis, playing ping pong, desire to learn how to play the guitar, and occasionally writing poetries.</p>
-          <p>Exploring a diverse range of technologies including HTML/CSS, JavaScript, Bootstrap, jQuery, SASS, React.js, Redux, D3.js, JSON APIs and AJAX, Node.js, Npm, Express.js, Mongoose, MongoDB, PostgreSQL, GIT, and Chai. And also Advanced Microsoft Excel / Google Sheets</p>     
-         <dl>
+    <p class="section__subtitle section__subtitle--about">Passionate about Data, Metrics, and Analytics</p>
+  <div class="about-me__body">
+    <p>I am a Data Analyst and former Mathematics educator with a strong foundation in analytical thinking, technical problem-solving, and real-time operational support. </p>
+    <p>Proficient in SQL, Google Looker Studio, Google Sheets scripting, and web technologies (HTML, CSS, JavaScript). I specialize in creating dynamic dashboards, monitoring key performance metrics, and delivering actionable insights for business optimization.</p>
+    <p>Beyond work, I enjoy playing ping pong, learning guitar, and exploring new technologies.</p>
+    <p>Certified in Data Visualization, SQL/Relational Databases, and Full-Stack Web Development (freeCodeCamp).</p>
+  </div>
           <dt>HTML-CSS</dt>
            <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/responsive-web-design" target="_blank">Certification</a></dd>
           <dt>JavaScript</dt>
