--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This page Halil Ibrahim Bilici's personal websites">
+    <meta name="description" content="Portfolio of Halil Ibrahim Bilici - Data Analyst | Real-Time Metrics Specialist | SQL | Looker Studio">
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-    <title>H. Ibrahim Bilici</title>
+      <title>Halil Ibrahim Bilici - Data Analyst Portfolio</title>
     <link rel="icon" href="./img/icon.svg" type="images/x-icon">
      <link rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" 
