--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio of Halil Ibrahim Bilici - Data Analyst | Real-Time Metrics Specialist | SQL | Looker Studio">
+    <meta name="description" content="This page Halil Ibrahim Bilici's personal websites">
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-      <title>Halil Ibrahim Bilici - Data Analyst Portfolio</title>
+    <title>H. Ibrahim Bilici</title>
     <link rel="icon" href="./img/icon.svg" type="images/x-icon">
      <link rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" 
@@ -61,11 +61,10 @@
    <!-- Introduction -->
    <section class="intro" id="home">
     <h1 class="section__title section__title--intro">
-        Hi I'm <strong>Halil Ibrahim Bilici</strong>
+        Hi I am <strong>Ibrahim Bilici</strong>
     </h1>
-      
     <p class="section__subtitle section__subtitle--intro">
-        Mathematician | Data Analyst
+        Mathematician / Software Developer
     </p>
     
     <img src="./img/ibrahim.bilici.JPG" alt="a picture of Ibrahim" class="intro__img" title="H. Ibrahim Bilici" loading="lazy">
@@ -83,8 +82,8 @@
         </div> <!-- / service -->
 
         <div class="service">
-            <h3>I am a Data Analyst</h3>
-            <p>I started learning Programming Languages in 2022. I can tell you knowing this type of languages you must be good at mathematics.</p>
+            <h3>I am a Software Developer</h3>
+            <p>I started learning Softwware Languages in 2022. I can tell you knowing this type of languages you must be good at mathematics.</p>
         </div> <!-- / service -->
 
         <div class="service">
@@ -101,29 +100,28 @@
     <!-- About me -->
     <section class="about-me" id="about">
       <h2 class="section__title section__title--about">About me</h2>
-    <p class="section__subtitle section__subtitle--about">Passionate about Data, Metrics, and Analytics</p>
-  <div class="about-me__body">
-    <p>I am a Data Analyst and former Mathematics educator with a strong foundation in analytical thinking, technical problem-solving, and real-time operational support. </p>
-    <p>Proficient in SQL, Google Looker Studio, Google Sheets scripting, and web technologies (HTML, CSS, JavaScript). I specialize in creating dynamic dashboards, monitoring key performance metrics, and delivering actionable insights for business optimization.</p>
-    <p>Beyond work, I enjoy playing ping pong, learning guitar, and exploring new technologies.</p>
-    <p>Certified in Data Visualization, SQL/Relational Databases, and Full-Stack Web Development (freeCodeCamp).</p>
-  </div>
-          <dt>HTML-CSS</dt>
-           <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/responsive-web-design" target="_blank">Certification</a></dd>
+      <p class="section__subtitle section__subtitle--about">I'm 30 who live in El Salvador</p>
+      <div class="about-me__body">
+         <p>I am Mathematician and Software Developer. I am married with a salvodorian lady. I came to El Salvador in march 2022.</p>
+         <p>I am someone who truly believes in the following strengs: Well organized,  Discipline
+          Detail oriented, Goal oriented, Teamwork, Open to feedback and passionated to work, Willing to learn all the time.</p>
+         <p>Here are a few technologies I've been working on</p>
+         <dl><dt>HTML-CSS</dt>
+          <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/responsive-web-design" target="_blank">Certification</a></dd>
           <dt>JavaScript</dt>
-           <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/javascript-algorithms-and-data-structures" target="_blank">Certification</a></dd>
-          <dt>Bootstrap-jQuery-SASS-React</dt>
-           <dd><a href="https://freecodecamp.org/certification/AbrahamBilici/front-end-development-libraries" target="_blank">Certification</a></dd>
-          <dt>D3.js - JSON APIs and AJAX</dt>
-           <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/data-visualization" target="_blank">Certification</a></dd>
-          <dt>Npm, Node.js, Express.js, MongoDB and Mongoose</dt>
-           <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/back-end-development-and-apis" target="_blank">Certification</a></dd>
-          <dt>SQL, PostgreSQL, Git</dt>
-           <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/relational-database-v8" target="_blank">Certification</a></dd>
-          <dt>Chai, Advanced Node.js and Express.js</dt>
-           <dd><a href="https://freecodecamp.org/certification/AbrahamBilici/quality-assurance-v7" target="_blank">Certification</a></dd>
-       </dl>         
-   </div>
+         <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/javascript-algorithms-and-data-structures" target="_blank">Certification</a></dd>
+      <dt>Bootstrap-jQuery-SASS-React</dt>
+      <dd><a href="https://freecodecamp.org/certification/AbrahamBilici/front-end-development-libraries" target="_blank">Certification</a></dd>
+      <dt>D3.js - JSON APIs and AJAX</dt>
+         <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/data-visualization" target="_blank">Certification</a></dd>
+      <dt>Npm, Node.js, Express.js, MongoDB and Mongoose</dt>
+         <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/back-end-development-and-apis" target="_blank">Certification</a></dd>
+         <dt>SQL, PostgreSQL, Git</dt>
+         <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/relational-database-v8" target="_blank">Certification</a></dd>
+         <dt>Chai, Advanced Node.js and Express.js</dt>
+         <dd><a href="https://freecodecamp.org/certification/AbrahamBilici/quality-assurance-v7" target="_blank">Certification</a></dd>
+      </dl>         
+      </div>
   
       <img src="./img/20221218_115946.jpg" alt="a pic of Ibrahim" class="about-me__img" title="H. Ibrahim Bilici" loading="lazy">
      </section>
@@ -212,7 +210,7 @@
    <a href="mailto:halilibrahimbilici@hotmail.com" class="footer-link">My e-mail</a>
    <ul class="social-list">
     <li class="social-list__item">
-        <a href="https://www.linkedin.com/in/ibrahim-bilici-78b987242/" class="social-list__link" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+        <a href="https://www.linkedin.com/in/h-ibrahim-bilici-78b987242/" class="social-list__link" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
     <li class="social-list__item">
         <a href="https://twitter.com/Avraambilici" class="social-list__link" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
     <li class="social-list__item">
