--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
    <!-- Introduction -->
    <section class="intro" id="home">
     <h1 class="section__title section__title--intro">
-        Hi I am <strong>Ibrahim Bilici</strong>
+        Hi I am <strong>Halil Ibrahim Bilici</strong>
     </h1>
     <p class="section__subtitle section__subtitle--intro">
-        Mathematician / Software Developer
+        Mathematician | Data Analyst
     </p>
     
     <img src="./img/ibrahim.bilici.JPG" alt="a picture of Ibrahim" class="intro__img" title="H. Ibrahim Bilici" loading="lazy">
@@ -82,7 +82,7 @@
         </div> <!-- / service -->
 
         <div class="service">
-            <h3>I am a Software Developer</h3>
+            <h3>I am a Data Analyst</h3>
             <p>I started learning Softwware Languages in 2022. I can tell you knowing this type of languages you must be good at mathematics.</p>
         </div> <!-- / service -->
 
@@ -102,7 +102,7 @@
       <h2 class="section__title section__title--about">About me</h2>
       <p class="section__subtitle section__subtitle--about">I'm 30 who live in El Salvador</p>
       <div class="about-me__body">
-         <p>I am Mathematician and Software Developer. I am married with a salvodorian lady. I came to El Salvador in march 2022.</p>
+         <p>I am Mathematician and Data Analyst. I am married with a salvodorian lady. I came to El Salvador in march 2022.</p>
          <p>I am someone who truly believes in the following strengs: Well organized,  Discipline
           Detail oriented, Goal oriented, Teamwork, Open to feedback and passionated to work, Willing to learn all the time.</p>
          <p>Here are a few technologies I've been working on</p>
