--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
     <div class="services">
         <div class="service">
             <h3>I am a Mathematician</h3>
-            <p>I graduated from mathematics in Turkiye, I am an expert on pure mathematics.</p>
+            <p>My Bachelor's degree in Mathematics provides me with a robust framework for analytical thinking and problem-solving, crucial for effective data analysis</p>
         </div> <!-- / service -->
 
         <div class="service">
             <h3>I am a Data Analyst</h3>
-            <p>I started learning Softwware Languages in 2022. I can tell you knowing this type of languages you must be good at mathematics.</p>
+            <p>As a Data Analyst, I leverage SQL, Google Looker Studio, and data visualization techniques to extract actionable insights and drive data-driven decisions</p>
         </div> <!-- / service -->
 
         <div class="service">
-            <h3>I am a teacher</h3>
-            <p>I have certification of pedagogical formation . I had worked for five years as a math teacher.</p>
+            <h3>I am a Teacher</h3>
+            <p>My five years as a mathematics teacher have developed my communication skills, enabling me to clearly explain data insights to both technical and non-technical audiences</p>
         </div> <!-- / service -->
     </div> <!-- / services -->
 
@@ -102,10 +102,10 @@
       <h2 class="section__title section__title--about">About me</h2>
       <p class="section__subtitle section__subtitle--about">I'm 30 who live in El Salvador</p>
       <div class="about-me__body">
-         <p>I am Mathematician and Data Analyst. I am married with a salvodorian lady. I came to El Salvador in march 2022.</p>
+         <p>Driven by a strong mathematical background and a passion for data, I excel at transforming raw information into actionable insights. As a Data Analyst, I have experience in monitoring KPIs, creating interactive dashboards, and delivering data-driven reports. My skills include SQL, Google Looker Studio, and advanced data visualization techniques. I am a detail-oriented team player with a proven ability to communicate complex data findings clearly and effectively.</p>
          <p>I am someone who truly believes in the following strengs: Well organized,  Discipline
           Detail oriented, Goal oriented, Teamwork, Open to feedback and passionated to work, Willing to learn all the time.</p>
-         <p>Here are a few technologies I've been working on</p>
+         <p>Here are a few technologies I had been working on</p>
          <dl><dt>HTML-CSS</dt>
           <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/responsive-web-design" target="_blank">Certification</a></dd>
           <dt>JavaScript</dt>
@@ -130,7 +130,7 @@
    <!-- My work-->
    <section class="my-work" id="work">
     <h2 class="section__title section__title--work">My Projects</h2>
-    <p class="section__subtitle section__subtitle--work">Here is some of my projects</p>
+    <p class="section__subtitle section__subtitle--work">These projects demonstrate my ability to leverage data to optimize performance and inform strategic decisions.</p>
 
     <div class="portfolio">
         <!-- portfolio item 1-->
