--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- Header -->
     <header>
         <div class="shortcuts">
-            <img src="./img/HalilIbrahimBilici.jpg" alt="Ibrahim's picture" class="header__img" title="H. Ibrahim Bilici" loading="lazy">
+            <img src="./img/LinkedInProfilePicture.png" alt="Ibrahim's picture" class="header__img" title="H. Ibrahim Bilici" loading="lazy">
             
             <figure class="song">
                <audio controls
