--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
     <!-- Header -->    
     <header>
       <div class="shortcuts">
-          <img src="./img/HalilIbrahimBilici.jpg" alt="Ibrahim's picture" class="header__img" title="H. Ibrahim Bilici" loading="lazy">
+          <img src="./img/LinkedInProfilePicture.png" alt="Ibrahim's picture" class="header__img" title="H. Ibrahim Bilici" loading="lazy">
           
           <figure class="song">
              <audio controls
@@ -67,7 +67,7 @@
         <p class="section__subtitle section__subtitle--intro">
             Check my resume below <a href="./resume.html#resume" ><i class="fa-solid fa-arrow-down"></i></a>
         </p>
-        <img src="./img/HalilIbrahimBilici.jpg" alt="a picture of Ibrahim" class="intro__img" title="H. Ibrahim Bilici" loading="lazy">
+        <img src="./img/LinkedInProfilePicture.png" alt="a picture of Ibrahim" class="intro__img" title="H. Ibrahim Bilici" loading="lazy">
     </section>
 
     <section class="resume" id="resume">
