--- a/index.html
+++ b/index.html
@@ -100,27 +100,11 @@
     <!-- About me -->
     <section class="about-me" id="about">
       <h2 class="section__title section__title--about">About me</h2>
-      <p class="section__subtitle section__subtitle--about">I'm 30 who live in El Salvador</p>
+      <p class="section__subtitle section__subtitle--about">From Data to Decisions</p>
       <div class="about-me__body">
-         <p>Driven by a strong mathematical background and a passion for data, I excel at transforming raw information into actionable insights. As a Data Analyst, I have experience in monitoring KPIs, creating interactive dashboards, and delivering data-driven reports. My skills include SQL, Google Looker Studio, and advanced data visualization techniques. I am a detail-oriented team player with a proven ability to communicate complex data findings clearly and effectively.</p>
-         <p>I am someone who truly believes in the following strengs: Well organized,  Discipline
-          Detail oriented, Goal oriented, Teamwork, Open to feedback and passionated to work, Willing to learn all the time.</p>
-         <p>Here are a few technologies I had been working on</p>
-         <dl><dt>HTML-CSS</dt>
-          <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/responsive-web-design" target="_blank">Certification</a></dd>
-          <dt>JavaScript</dt>
-         <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/javascript-algorithms-and-data-structures" target="_blank">Certification</a></dd>
-      <dt>Bootstrap-jQuery-SASS-React</dt>
-      <dd><a href="https://freecodecamp.org/certification/AbrahamBilici/front-end-development-libraries" target="_blank">Certification</a></dd>
-      <dt>D3.js - JSON APIs and AJAX</dt>
-         <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/data-visualization" target="_blank">Certification</a></dd>
-      <dt>Npm, Node.js, Express.js, MongoDB and Mongoose</dt>
-         <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/back-end-development-and-apis" target="_blank">Certification</a></dd>
-         <dt>SQL, PostgreSQL, Git</dt>
-         <dd><a href="https://www.freecodecamp.org/certification/AbrahamBilici/relational-database-v8" target="_blank">Certification</a></dd>
-         <dt>Chai, Advanced Node.js and Express.js</dt>
-         <dd><a href="https://freecodecamp.org/certification/AbrahamBilici/quality-assurance-v7" target="_blank">Certification</a></dd>
-      </dl>         
+         <p>Building on a robust mathematical foundation and an unyielding passion for data, I excel at transforming raw information into actionable insights. As a Data Analyst, I leverage advanced tools such as SQL, Microsoft Excel, Google Sheets, Google Looker Studio, and Google Data Studio to craft dynamic KPI dashboards and detailed reporting systems. My work revolves around driving business intelligence (BI) through meticulous data analysis, effective Extract, Transform, Load (ETL) strategies using Microsoft Power Query, and an unwavering commitment to data-driven decision making.</p>
+         <p>I am well-versed in KPI reporting and data visualization, creating interactive dashboards that translate complex figures into clear narratives. My approach is defined by strong analytical skills, critical thinking, and a dedication to attention to detail, ensuring that every insight is both precise and actionable. In a fast-paced environment, my time management, multitasking abilities, and decision-making prowess allow me to meet demanding deadlines while maintaining high standards of reporting and analysis.</p>
+         <p>Beyond technical acumen, I thrive on clear communication and active listening—key components in data storytelling and teamwork. I continuously refine my problem-solving skills, remain receptive to feedback, and commit to ongoing learning to push the boundaries of business intelligence and data analytics.</p>        
       </div>
   
       <img src="./img/20221218_115946.jpg" alt="a pic of Ibrahim" class="about-me__img" title="H. Ibrahim Bilici" loading="lazy">
