--- a/resume.html
+++ b/resume.html
@@ -65,7 +65,7 @@
          <strong>My Resume</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">
-            Check my resume below <a href="./resume.html#resume" ><i class="fa-solid fa-arrow-down"></i></a>
+            <a href="./audio/ResumeHalilIbrahimBilici.pdf" download>Download My Resume</a> or Check my resume below <a href="./resume.html#resume" ><i class="fa-solid fa-arrow-down"></i></a>
         </p>
         <img src="./img/LinkedInProfilePicture.png" alt="a picture of Ibrahim" class="intro__img" title="H. Ibrahim Bilici" loading="lazy">
     </section>
