--- a/contact.html
+++ b/contact.html
@@ -226,7 +226,7 @@
       </div>
       
       <div id="error-message" style="display: none;">
-        <h3>Form didn't submit,  Please try it again on <a href="https://halilibrahimbilici.glitch.me/contact.html">here</a>.</h3>
+        <h3>Form didn't submit,  Please <a href="mailto:halilibrahimbilici@hotmail.com" class="footer-link">send an e-mail by that link</a></h3>
         
       </div>
     </fieldset>
